calculate.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculate
  labels:
    app: calculate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculate
  template:
    metadata:
      labels:
        app: calculate
    spec:
      containers:
      - name: calculate
        image: nutslove/fastapi-calculate:v1
        # image: nutslove/fastapi-calculate:v2
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: calculate
spec:
  selector:
    app: calculate
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    nodePort: 30001
