calculate_Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: calculate
spec:
  selector:
    app: calculate
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    nodePort: 30001
