client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: nutslove/fastapi-client:v1
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    nodePort: 30000
