Istio_URI_IngressGateway.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
#  namespace: istio-system
  namespace: default
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs-for-uri-gateway
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
#    - istio-system/ingress-gateway-configuration
    - ingress-gateway-configuration
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: client.default.svc.cluster.local
        port:
          number: 80
